# scoped-search-engine

./: .gitignore  Cargo.toml  README.md  hewwwooooo  test
backend/: Cargo.toml  icepick_crawl_data#13449147317035325007.json  test1  test2  testing
backend/src/: eval.rs  lib.rs  main.rs  user_options.rs
backend/src/main_logic/: eval.rs  mod.rs  scoring.rs  store.rs  tree.rs  user_options.rs
backend/src/server/: mod.rs  recv.rs  reply.rs  server_utils.rs
backend/src/utils/: error.rs  misc.rs  mod.rs  searcher.rs  ser_de.rs
cli/: Cargo.toml
cli/src/: cli.rs  lib.rs  main.rs
core/: Cargo.toml  Trunk.toml  index.html  with_rq.txt  without_rq.txt
core/src/: lib.rs  main.rs  pages.rs  results.rs
core/src/static/: styles.css
engine-backend/: Cargo.toml  idkk  results_wow  results_wow2  test
engine-backend/src/: lib.rs  main.rs
icepick-backend/: Cargo.toml
icepick-backend/src/: lib.rs  main.rs
icepick-backend/src/main_logic/: eval.rs  mod.rs  scoring.rs  tree.rs  user_options.rs
icepick-backend/src/server/: recv.rs  reply.rs  server_utils.rs
icepick-backend/src/utils/: error.rs  searcher.rs  ser_de.rs
indexer/: Cargo.toml
indexer/src/: html_to_urls.rs  indexer_maker.rs  lib.rs
sort-results/: Cargo.toml
sort-results/src/: lib.rs  matches.rs
src/: html_to_urls.rs  lib.rs
webui/: Cargo.toml  Trunk.toml  index.html  style.css
webui/src/: app.rs  lib.rs  main.rs
webui/src/components/: mod.rs  pagination.rs  switch.rs
webui/src/pages/: landing.rs  loading.rs  mod.rs  results.rs
xx/: idk  idk2  idk3  output
xxx/: idk  idk2  idk3  testing
