[package]
name = "wikipedia_browser"
version = "0.1.0"
edition = "2021"

[dependencies]
select = "0.6.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
tokio = { version = "1.42.0", features = ["full"] }
url = "2.5.4"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"