[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0.9"
rocket = "0.5.1"
reqwest = "0.12.11"
select = "0.6.0"
regex = "1.11.1"
rayon = "1.10.0"
tokio = "1.42.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
futures = "0.3.31"