[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.11.0"
web-sys = "0.3.76"
# reqwest = "0.12.11"
# this is the development version of Yew
# yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = "0.18.0"
yew = { version = "0.21.0", features = ["csr"] }
reqwasm = "*"
serde = { workspace = true }
serde_json = { workspace = true }